--- a/par2.css
+++ b/par2.css
@@ -22,12 +22,19 @@ color: blue;
  
 }
 a{
-    text-emphasis: none;
-  color: orange;
+ 
+  color: blue;
     padding: 5px;
-    font-size: 8pt;
-    border-radius: 0.8rem;
-    colo
+   
+}
+
+a:hover{
+    text-emphasis: none;
+        color: orange;
+        padding: 3px;
+        font-size: 12pt;
+        border-radius: 1.8rem;
+    
 }
 
 .jumbotron{
@@ -35,5 +42,9 @@ a{
     background-color: white;
 }
 section,img{
+    text-align: center;
+}
+footer
+{
     text-align: center;
 }
