--- a/trabalho.css
+++ b/trabalho.css
@@ -1,16 +1,20 @@
 body{
     background-color: orange;
 }
-li,a:hover{
+a:hover{
     text-emphasis: none;
-        color: blue;
+        color: orange;
         padding: 3px;
         font-size: 12pt;
         border-radius: 1.8rem;
     
 }
-
-  
+li{
+    color: blue;
+}
+a{
+ color: blue;
+}
 article{
     display: inline-flex;
 }
